Fix optionsQuery to query 10 stocks at a time

--- a/.gitignore
+++ b/.gitignore
@@ -21,11 +21,14 @@ var/
 Transactions/
 Prices/
 OptionsPrices/
+OptionsPrices_full_backup/
 OptionsTransactions/
 samples/dudu/_backtrader
 *.egg-info/
 .installed.cfg
 *.egg
+log.txt
+cache.csv
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
